<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/search_border"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/pop"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/popular_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/burgers"
            tools:src="@drawable/ham_burger_with_vegetables"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/pop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/popular_name"
            tools:text="@string/chicken_burger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/popular_class_name"
            tools:text="@string/flavoroso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/popular_price"
            tools:text="@string/pricee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_baseline_more_vert_24"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"/>

</RelativeLayout>