<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".CartActivity"
    android:background="#f5f5f5"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cart_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_margin="16dp"/>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="50dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_order"
                        android:id="@+id/my_order"
                        android:textSize="24sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_order"
                        android:text="@string/items_selected"
                        android:textSize="24sp"
                        android:textStyle="bold"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/icon"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/bin_border"
                        android:src="@drawable/ic_outline_delete_forever_24"
                        android:layout_centerVertical="true"
                        android:padding="10dp"/>
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cart_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp">
                    <TextView
                        android:id="@+id/subtotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub"/>
                    <TextView
                        android:textStyle="bold"
                        android:id="@+id/sub_price"
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cart_price"/>
                    <TextView
                        android:text="@string/delivery_charge"
                        android:id="@+id/delivery_charge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/subtotal"
                        android:layout_marginTop="16dp"/>
                    <TextView
                        android:textStyle="bold"
                        android:layout_marginTop="16dp"
                        android:text="@string/delivery"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@id/sub_price"
                        android:id="@+id/free_delivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#f5f5f5"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp">
                    <TextView
                        android:text="@string/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tot_price"
                        android:text="@string/cart_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:textStyle="bold"
                        android:textSize="24sp"/>
                </RelativeLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="32dp"
                    android:text="@string/checkout"
                    android:background="@drawable/button_border"
                    android:textStyle="bold"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>