<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/main_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_short_text_24"
            android:contentDescription="@string/icon"/>

        <ImageView
            android:id="@+id/main_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_outline_shopping_basket_24"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/icon"/>


    </RelativeLayout>

    <TextView
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi"/>
    <TextView
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/special"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <SearchView
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@drawable/search_border"
            android:layout_marginEnd="7dp"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_tune_24"
            android:padding="10dp"
            android:contentDescription="@string/icon"
            android:rotation="90"
            android:background="@drawable/tune_border"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/icon_burger"
        android:id="@+id/icon_burger_recycler"
        android:orientation="horizontal"
        tools:itemCount="2"/>

    <TextView
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/popular"
        android:textSize="24sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_burger_recycler"
        tools:listitem="@layout/main_burger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

</LinearLayout>