<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/search_border"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/pop"
        app:cardCornerRadius="10dp">

        <ImageView
            android:scaleType="fitXY"
            android:id="@+id/cart_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/burgers"
            tools:src="@drawable/ham_burger_with_vegetables"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/pop"
        android:layout_marginStart="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cart_name"
            tools:text="@string/chicken_burger"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_baseline_add_24"
                android:padding="7dp"
                android:background="@drawable/number_border"
                android:id="@+id/plus"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:text="1"
                android:gravity="center_vertical"
                android:id="@+id/count"
                android:layout_toEndOf="@id/plus"
                android:textSize="24sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <ImageView
                android:layout_toEndOf="@id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_baseline_remove_24"
                android:padding="7dp"
                android:background="@drawable/number_border"
                android:id="@+id/minus"/>
        </RelativeLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/cart_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/pricee"
        android:textStyle="bold"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"/>

</RelativeLayout>