<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity"
    android:background="#f5f5f5">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/details_back"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon"/>
            <ImageView
                android:id="@+id/details_cart"
                android:src="@drawable/ic_outline_shopping_basket_24"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon"/>

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="50dp"
            android:layout_marginTop="24dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/image"
                    android:src="@drawable/cheesy_burger"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="50dp"
                android:layout_marginTop="400dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentPadding="32dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/beef"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/beef_cheese"
                            android:textSize="32sp"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/icon"
                            android:src="@drawable/ic_baseline_favorite_border_24"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"/>

                        <RatingBar
                            android:layout_below="@id/beef"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:rating="4"
                            android:progressTint="#ffd700"
                            android:layout_marginTop="10dp"/>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/long_text"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:layout_marginTop="32dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/icon"
                            android:src="@drawable/ic_baseline_add_24"
                            android:padding="10dp"
                            android:background="@drawable/bin_border"
                            android:id="@+id/plus"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="44dp"
                            android:text="1"
                            android:gravity="center_vertical"
                            android:id="@+id/count"
                            android:layout_toEndOf="@id/plus"
                            android:textSize="24sp"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"/>

                        <ImageView
                            android:layout_toEndOf="@id/count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/icon"
                            android:src="@drawable/ic_baseline_remove_24"
                            android:padding="10dp"
                            android:background="@drawable/bin_border"
                            android:id="@+id/minus"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pricee"
                            android:textSize="32sp"
                            android:textStyle="bold"
                            android:layout_alignParentEnd="true"/>

                    </RelativeLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/button_border"
                        android:text="@string/add_to_card"
                        android:textStyle="bold"
                        android:layout_marginTop="32dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>